created a bunch of endpoints on node
